--- a/app/data-script-deployment.yaml
+++ b/app/data-script-deployment.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   annotations:
@@ -9,6 +9,9 @@ metadata:
     io.kompose.service: data-script
   name: data-script
 spec:
+  selector:
+    matchLabels:
+      io.kompose.service: data-script
   replicas: 1
   strategy: {}
   template:
@@ -18,7 +21,7 @@ spec:
         io.kompose.service: data-script
     spec:
       containers:
-      - image: data-script
+      - image: saikal1984/quotes-data-script:v1
         name: data-script
         resources: {}
       restartPolicy: Always
