--- a/app/data-deployment.yaml
+++ b/app/data-deployment.yaml
@@ -20,6 +20,10 @@ spec:
       labels:
         io.kompose.service: data
     spec:
+      volumes:
+      - name: pvc
+        persistentVolumeClaim:
+          claimName: aws-pvc
       containers:
       - env:
         - name: MYSQL_ALLOW_EMPTY_PASSWORD
@@ -32,6 +36,9 @@ spec:
           value: root
         image: saikal1984/quotes-data:v1
         name: db
+        volumeMounts:
+        - mountPath: /var/lib/mysql
+          name: pvc
         ports:
         - containerPort: 3306
         resources: {}
